Redo logic
